--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,10 @@
-<h2>김길동이 작업했어요</h2>
+<!doctype html>
+<html lang="ko" data-dark="true">
+	<head>
+	<meta charset="utf-8">
+	<title>index.html</title>
+	</head>
+<body>
+	<h2>김길동이 작업했어요</h2>
+</body>
+</html>
